--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "esModuleInterop": true,
       "lib": ["es2015", "es2015.promise"]
     },
-    "include": ["src"],
+    "include": ["index.ts"],
     "exclude": ["node_modules"]
   }
   
