--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "agixt",
-  "version": "1.0.36",
+  "version": "1.0.37",
   "description": "AGiXT Typescript SDK",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,6 +21,9 @@
     "url": "https://github.com/AGiXT/typescript-sdk/issues"
   },
   "homepage": "https://github.com/AGiXT/typescript-sdk#readme",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "dependencies": {
     "axios": "^1.4.0"
   },
