--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
       "lib": ["es2015", "es2015.promise"]
     },
     "include": ["index.ts"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "dist"]
   }
   
