--- a/package.json
+++ b/package.json
@@ -30,12 +30,11 @@
     ".": "./dist/index.js"
   },
   "dependencies": {
-    "axios": "^1.6.5"
+    "axios": "^1.6.7"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -47,6 +46,7 @@
     "eslint-plugin-security": "^2.1.0",
     "eslint-plugin-sonarjs": "^0.23.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "prettier": "^3.2.4"
+    "prettier": "^3.2.4",
+    "typescript": "^5.3.3"
   }
 }
